@@ -86,6 +86,7 @@ echo $t->is_a('Invalid');
 echo "\n";
 
 // print_r($t);
+$t->dup();
 
 $t->super();
 
