@@ -2,6 +2,7 @@
   * Huge refactor
   * Add Object::new_instance_array method
   * Add autoloading and marshal class
+  * Add Object::cloned and Object#dup
 
 2009-03-16 - Sean Huber (shuber@huberry.com)
   * Add Struct class
